--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -31,7 +31,7 @@ append content
         form(role="form")
          .form-group.center
            input#new_user_name.form-control.center-block(type="text", placeholder="Choose Your User Name", style="width:70%;margin-bottom:10px;", autocomplete="off", autocorrect="off", autocapitalize="off", autofocus)
-           input#new_user_create.btn.btn-primary.disabled.center-block(role="button", type="submit", value="Confirm", href='#', style="width:70%;margin-bottom:10px;")
+           input#new_user_create.btn.btn-primary.disabled.center-block(role="button", type="submit", value="Sign Up", href='#', style="width:70%;margin-bottom:10px;")
            a(onclick="temp.login()", style="margin-left:15%;") Sign In
       .modal-footer
         br
