--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -21,7 +21,7 @@ append head
 
 append content
   .overlay
-  .modal-dialog.modal-lg.absolute-center#login
+  .modal-dialog.modal-lg.absolute-center.create_or_change_name#login
     .modal-content
       .modal-header
         h4#myModalLabel.modal-title(style="display:inline;") Welcome to
