Added new logo to code.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -34,7 +34,7 @@ html
           span.icon-bar
           span.icon-bar
         a.navbar-brand(href='#')
-          img(src='https://www.filepicker.io/api/file/DTOJ2HhRjWe2nNPEVA3P')#logo
+          img(src='images/BitSplitLogo.png')#logo
       .navbar-collapse.collapse#bitsplitnav-buttons
         ul.nav.navbar-nav.navbar-right
           //- li
