Now socket.io errors will be reported via the console.log.
A specific error (which is now fixed) was causing a disconnect issue, which was in turn causing problems with the chat.

--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -1,6 +1,9 @@
 script.
   var socket = io.connect(!{socket_address});
 
+  socket.on("error", function(err) {
+    console.log("socket.io error: ", err);
+  });
   socket.on("error_msg", function (json) {
     alertify.error(json.msg, "", 3000);
   });
