--- a/public/views/menu.jade
+++ b/public/views/menu.jade
@@ -1,31 +1,18 @@
-.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-  .container
-    .navbar-header
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='/')
-        | Bit
-        span#logo_split
-        | Split
-        span#logo_split2 &NonBreakingSpace;
-    .navbar-collapse.collapse
-      ul.nav.navbar-nav
-        li
-          a(href='#') FAQ
-        li
-          a(href='#') The Math
-        li
-          a(href='#' onclick="temp.login();") Sign In
-      ul.nav.navbar-nav.navbar-right
-        li
-          table
-            tr
-              td
-                span(style="color:white") Currency: 
-              td(style="padding-left: 10px;")
-                select(id="currency_type",onchange="change_currency_type($(this).val());" style='margin-top:15px;')
-                  option(value="fake") Fake
-                  option(value="btc") Bitcoin
+#bitsplitnav.navbar.transparent.navbar-fixed-top.navbar-inverse
+  .navbar-header
+    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+      span.icon-bar
+      span.icon-bar
+      span.icon-bar
+    a.navbar-brand(href='#')
+      img(src='images/BitSplitLogo.png')#logo
+  .navbar-collapse.collapse#bitsplitnav-buttons
+    ul.nav.navbar-nav.navbar-right
+      // li
+      //   a(href='#').referral_popup Referral Program
+      li
+        a(href='#howitworks', data-toggle='modal', data-target='#howitworks') How It Works
+      li
+        a(href='#contact', data-toggle='modal', data-target='#contact') Contact
+      li.active
+        a#signinbtn(href='#signin', onclick="temp.login();") Sign In
