Re-enabled referral program in menu and sidebar.  Changed the message.

--- a/public/views/menu.jade
+++ b/public/views/menu.jade
@@ -8,8 +8,8 @@
       img(src='images/BitSplitLogo.png')#logo
   .navbar-collapse.collapse#bitsplitnav-buttons
     ul.nav.navbar-nav.navbar-right
-      // li
-      //   a(href='#').referral_popup Referral Program
+      li
+        a(href='#').referral_popup Referral Program
       li
         a(href='#howitworks', data-toggle='modal', data-target='#howitworks') How It Works
       li
