Referrals are now included in the Past Winners table.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -94,6 +94,7 @@ html
                       th PRIZE
                       th NEXT JACKPOT
                       th HOUSE
+                      th REFERRAL
                   tbody
               .tab-pane#chat_toggle2
           .col-xs-12.col-sm-5.col-md-4.col-lg-4.nosidemargin.rsNoDrag.chart
