--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title BitSplit&period;it
+    title BitSplit
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css')
