Chat should not be quite as annoying when its history is updated.  Will scroll to the bottom quickly instead of choppily and slowly.

--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -52,8 +52,9 @@ script.
     $(chat_body_sel).html("");
 
     $.each(json.messages.reverse(), function(ii, message) {
-      add_message_to_chat(message.user_name, message.message);
+      add_message_to_chat(message.user_name, message.message, false);
     });
+    scroll_chat_to_bottom();
   });
 
   socket.on("referral_signup", function (json) {
