Message will not be shown in the chat if data is not properly-formed.

--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -44,6 +44,7 @@ script.
   });
 
   socket.on("chat_message", function (json) {
+    if(!json.user_name || !json.message) return;
     add_message_to_chat(json.user_name, json.message);
     play_sound('audio/chat.mp3');
   });
