--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -45,15 +45,15 @@ script.
 
   socket.on("chat_message", function (json) {
     if(!json.user_name || !json.message) return;
-    add_message_to_chat(json.user_name, json.message);
+    add_message_to_chat(json);
     play_sound('audio/chat.mp3');
   });
   socket.on("chat_history", function (json) {
     var chat_body_sel = "#chat_body"; // TODO: DRY
     $(chat_body_sel).html("");
 
-    $.each(json.messages.reverse(), function(ii, message) {
-      add_message_to_chat(message.user_name, message.message, false);
+    $.each(json.messages.reverse(), function(ii, data) {
+      add_message_to_chat(data, false);
     });
     scroll_chat_to_bottom();
   });
