Added the "Powered By MixPanel" logo.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -145,6 +145,8 @@ html
 
 
   footer.navbar-fixed-bottom.navbar-inverse
+    a(href="https://mixpanel.com/f/partner")
+      img(src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" style="float:left;margin: 3px;margin-right: 20px;")
     .bit.bitbank
           a.my_user_name.welcome
           i.fa.fa-edit(style="display:inline-block;float:left;padding:7px;margin-top:8px;")#edit_user_name
@@ -152,7 +154,6 @@ html
           .btn-group.btn-group.btn-group-justified.btn-group-transparent
             a.btn.btn-default#withdraw Withdraw
             a.btn.btn-default#deposit Deposit    
-          
   // FAQ Modal
   
 
